aacparse: Properly report in the CAPS query that we can convert ADTS<->RAW

https://bugzilla.gnome.org/show_bug.cgi?id=733190